[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mail_editor"
version = "0.3.7"
description = "A Django package for email template editing"
authors = [
    {name = "Maykin Media", email = "support@maykinmedia.nl"}
]
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["TODO"]
classifiers = [
    "Development Status :: 3 - Alpha",
    'Environment :: Web Environment',
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    'License :: OSI Approved :: BSD License',
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    'Programming Language :: Python',
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "django>=3.2",
    "django-choices",
    "django-ckeditor",
    "requests",
    "lxml",
    "css_inline"
]

[project.urls]
Homepage = "https://github.com/maykinmedia/mail-editor"
Documentation = "https://github.com/maykinmedia/mail-editor"
"Bug Tracker" = "https://github.com/maykinmedia/mail-editor/issues"
"Source Code" = "https://github.com/maykinmedia/mail-editor"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-django",
    "tox",
    "isort",
    "black",
    "flake8",
    "autoflake",
    "django_webtest",
]
coverage = [
    "pytest-cov",
]
release = [
    "bump-my-version",
    "twine",
]

[tool.setuptools.packages.find]
include = ["mail_editor*"]
exclude = ["tests", "testapp"]
namespaces = false

[tool.isort]
profile = "black"
combine_as_imports = true
known_django = "django"
known_first_party="mail_editor"
sections=["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "testapp.settings"

[tool.bumpversion]
current_version = "0.3.7"
files = [
    {filename = "pyproject.toml"},
    {filename = "README.rst"},
]

[tool.coverage.report]
exclude_also = [
    "if (typing\\.)?TYPE_CHECKING:",
    "@(typing\\.)?overload",
    "class .*\\(.*Protocol.*\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "pass",
]
